--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2>成果物</h2>
           </div>
           <ul>
-            <li>Coming Soon (maybe...)</li>
+            <li><a href="https://todo-app-sakata.web.app/">ToDo アプリ</a></li>
           </ul>
         </div>
         </div>
